2009-07-12 13:45 adburton

	* src/: gmameui-gamelist-view.c gmameui-gamelist-view.h filters_list.c
	  filters_list.h gmameui.c gmameui.h interface.c: Move filter setup code
	  into filters_list.c, improve speed of switching between filters on the LHS
	  and the filter buttons at the top of the gamelist by not rebuilding the
	  entire GtkTreeModel whenever the filter is changed, prompt user to rebuild
	  gamelist if it is out of date or missing at startup

2009-07-12 13:42 adburton

	* src/: rom_entry.c, rom_entry.h, mameio.c, gmameui-rominfo-dlg.c,
	  game_list.c: Remove items from the gamelist file that are not required on
	  startup and only load them when opening the ROM Properties dialog (this
	  requires a gamelist rebuild), add processing of individual ROMs and SHA1
	  values

2009-07-03 20:35 adburton

	* configure.ac, NEWS: Tagged for new release

2009-07-02 20:45 adburton

	* INSTALL: Updated installation instructions for CVS
	* src/interface.c: Remember choice of selected filter button upon start

2009-06-27 15:08 adburton

	* AUTHORS, src/about.c: New French translation

2009-06-26 20:58 adburton

	* src/: gui.c, gui.h, interface.c, gmameui.c: Fix segfault if Glade data
	files could not be loaded on startup
	* src/game_list.c: Move free of string after debug line
	* src/interface.c: Set UI items disabled if no executable or games listed
	* src/interface.h: ifdef out treeview items to hide Gtk-CRITICAL warnings
	on startup
	* src/gui_prefs.c: Report and clear GError to fix Gtk-CRITICAL warnings on
	startup
	* src/gmameui-gamelist-view.c: Fix compilation warnings

2009-06-23 18:55 adburton

	* data/gmameui_prefs.glade, src/: gmameui-gamelist-view.c,
	  gmameui-rominfo-dlg.c, gui.c, gui.h, gui_prefs.c, gui_prefs.h,
	  gui_prefs_dialog.c: New preference option for using custom icons where
	  available instead of status icons. Also retain the setting even the ROM
	  is played or audited (SF Bug 2011168)